--- a/command-wrapper.cabal
+++ b/command-wrapper.cabal
@@ -39,6 +39,8 @@ executable command-wrapper
 
     , executable-path
 
+  default-language:     Haskell2010
+
   ghc-options:          -Wall
   if impl(ghc >= 6.8)
     ghc-options:        -fwarn-tabs
