--- a/.gitignore
+++ b/.gitignore
@@ -6,80 +6,9 @@
 #
 #   https://github.com/github/gitignore
 
-# {{{ Global/Archives.gitignore ###############################################
-# It's better to unpack these files and commit the raw source because
-# git has its own built in compression methods.
-*.7z
-*.jar
-*.rar
-*.zip
-*.gz
-*.bzip
-*.bz2
-*.xz
-*.lzma
-*.cab
-
-#packing-only formats
-*.iso
-*.tar
-
-#package management formats
-*.dmg
-*.xpi
-*.gem
-*.egg
-*.deb
-*.rpm
-*.msi
-*.msm
-*.msp
-# }}} Global/Archives.gitignore ###############################################
-
-# {{{ Global/Linux.gitignore ##################################################
-*~
-
-# KDE directory preferences
-.directory
-# }}} Global/Linux.gitignore ##################################################
-
-# {{{ Global/TortoiseGit.gitignore ############################################
-# Project-level settings
-/.tgitconfig
-# }}} Global/TortoiseGit.gitignore ############################################
-
-# {{{ Global/vim.gitignore ####################################################
-[._]*.s[a-w][a-z]
-[._]s[a-w][a-z]
-*.un~
-Session.vim
-.netrwhist
-*~
-# }}} Global/vim.gitignore ####################################################
-
-# {{{ Global/Windows.gitignore ################################################
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-# }}} Global/Windows.gitignore ################################################
-
 # {{{ Haskell.gitignore #######################################################
 dist
+dist-*
 cabal-dev
 *.o
 *.hi
@@ -87,13 +16,22 @@ cabal-dev
 *.chs.h
 *.dyn_o
 *.dyn_hi
-.virtualenv
 .hpc
 .hsenv
 .cabal-sandbox/
 cabal.sandbox.config
-cabal.config
 *.prof
 *.aux
 *.hp
+*.eventlog
+.stack-work/
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
 # }}} Haskell.gitignore #######################################################
+
+# {{{ Local ###################################################################
+command-wrapper.cabal
+#stack.yaml
+# }}} Local ###################################################################
