Subcommand for generating subcommand skeletons
This subcommand is intentionally external, to allow it being overridden.

--- a/package.yaml
+++ b/package.yaml
@@ -43,3 +43,10 @@ executables:
     main: Main.hs
     dependencies:
       - *this
+
+  command-wrapper-skel:
+    source-dirs: app-skel
+    main: Main.hs
+    dependencies:
+      - *this
+      - turtle
