--- a/package.yaml
+++ b/package.yaml
@@ -44,6 +44,13 @@ executables:
     dependencies:
       - *this
 
+  command-wrapper-cd:
+    source-dirs: app-cd
+    main: Main.hs
+    dependencies:
+      - *this
+      - turtle
+
   command-wrapper-skel:
     source-dirs: app-skel
     main: Main.hs
