--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
-resolver: lts-12.5
+resolver: lts-12.7
 
 packages:
   - '.'
@@ -13,9 +13,15 @@ packages:
       git: https://github.com/trskop/mainplate.git
       commit: 1153b1ff1c53558c13c4c268e05a53d1f4bb16c6
     extra-dep: True
+  - location:
+      git: https://github.com/trskop/verbosity.git
+      commit: 5e3f323a630978d511526e5f871e2bfbd37892dd
+    extra-dep: True
 
 extra-deps:
   - endo-0.3.0.1
   - dhall-1.16.1
 
-# flags: {}
+flags:
+  verbosity:
+    dhall: True
