--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
-resolver: lts-12.7
+resolver: lts-12.8
 
 packages:
   - '.'
@@ -20,7 +20,8 @@ packages:
 
 extra-deps:
   - endo-0.3.0.1
-  - dhall-1.16.1
+  - dhall-1.17.0
+  - serialise-0.2.0.0 # dhall dependency
 
 flags:
   verbosity:
