Skeleton for `exec` subcommand
Subcommand `exec` is intended to be used for executing commands with a
predefined environment/arguments. Basically more advanced aliases. Most
of the features should come from using Dhall.

--- a/package.yaml
+++ b/package.yaml
@@ -61,3 +61,11 @@ executables:
       - *this
       - turtle
       - case-insensitive
+
+  command-wrapper-exec:
+    source-dirs: app-exec
+    main: Main.hs
+    dependencies:
+      - *this
+      - turtle
+      - case-insensitive
