--- a/stack.yaml
+++ b/stack.yaml
@@ -20,8 +20,16 @@ packages:
 
 extra-deps:
   - endo-0.3.0.1
-  - dhall-1.17.0
-  - serialise-0.2.0.0 # dhall dependency
+  - dhall-1.18.0
+  - dhall-bash-1.0.16
+  - dhall-json-1.2.4
+  - dhall-text-1.0.13
+
+  # Dhall dependencies:
+  - serialise-0.2.1.0
+  - megaparsec-7.0.2
+  - repline-0.2.0.0
+  - neat-interpolation-0.3.2.4  # dhall-bash
 
 flags:
   verbosity:
