Somewhat working version of tab completion
This is just a provisional implementation. To enable use:

```
source <(dhall-to-text <<< '(./dhall/CommandWrapper/completion.dhall "yx" "${env:HOME as Text}/bin/yx").bash')
```

Change `yx` value to the name of your toolset.

--- a/package.yaml
+++ b/package.yaml
@@ -19,24 +19,29 @@ extra-source-files:
 
 dependencies:
   - base
+
   - case-insensitive
   - comonad
   - dhall >=1.17
+  - dhall-bash
+  - dhall-json
   - directory
   - endo
   - executable-path
   - filepath
+  - fuzzy
   - generic-lens
   - host-and-port
   - mainplate
   - mtl
   - optparse-applicative
   - projectroot
+  - safe
+  - terminfo
   - text
   - unix
   - unordered-containers
   - verbosity >=0.3
-  - terminfo
 
 ghc-options: -Wall
 
@@ -70,3 +75,10 @@ executables:
     dependencies:
       - *this
       - containers
+
+# command-wrapper-daemon:
+#   source-dirs: app-daemon
+#   main: Main.hs
+#   dependencies:
+#     - *this
+#     - containers
