--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,7 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
-resolver: lts-12.17
+resolver: lts-12.20
 
 packages:
   - '.'
@@ -22,14 +22,15 @@ extra-deps:
   - endo-0.3.0.1
   - fuzzy-0.1.0.0
 
-  - dhall-1.18.0
-  - dhall-bash-1.0.16
-  - dhall-json-1.2.4
-  - dhall-text-1.0.13
+  - dhall-1.19.1
+  - dhall-bash-1.0.17
+  - dhall-json-1.2.5
+  - dhall-text-1.0.14
 
   # Dhall dependencies:
-  - serialise-0.2.1.0
-  - megaparsec-7.0.2
+  - dotgen-0.4.2@sha256:309b7cc8a3593a8e48bee7b53020d5f72db156d58edf78a0214f58fbb84b292b
+  - serialise-0.2.1.0@sha256:8d6051f64c6ebfaf705195dd0b8dfb667617f2e674b290ed2e44985009e4f951
+  - megaparsec-7.0.4
   - repline-0.2.0.0
   - neat-interpolation-0.3.2.4  # dhall-bash
 
