Rewriting `install` script in Haskell with Shake
New version has all the original capabilities, and few on top.  However,
there are things to be done.  Most of all tracking Dhall dependencies so
that they (executables) are upgraded when the Dall dependency version
changes.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ cabal.project.local~
 # }}} Haskell.gitignore #######################################################
 
 # {{{ Local ###################################################################
+.shake/
 command-wrapper.cabal
 #stack.yaml
 # }}} Local ###################################################################
