Enhancing documentation; introducing man pages
* Corrections in `README.md`
* Minimalistic documentation of provided external commands.
* Moved Subcommand Protocol definition from `SUBCOMMAND_PROTOCOL.md`
  into `man/command-wrapper-subcommand-protocol.7.md`.  Plan is to
  support manual pages in the future.
* Skeleton of `man/command-wrapper.1.md`.

--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,7 @@ cabal.project.local~
 # {{{ Local ###################################################################
 .shake/
 command-wrapper.cabal
+man/*.1
+man/*.7
 #stack.yaml
 # }}} Local ###################################################################
