Handle options parsing errors in a more consistent way
This is still work in progress.  Still need to respect verbositi and
colour output preferences.

--- a/package.yaml
+++ b/package.yaml
@@ -9,7 +9,7 @@ license: BSD3
 license-file: LICENSE
 author: Peter Trško
 maintainer: peter.trsko@gmail.com
-copyright: (c) 2014-2018 Peter Trško
+copyright: (c) 2014-2019 Peter Trško
 category: Tools
 
 extra-source-files:
@@ -37,6 +37,7 @@ dependencies:
   - mtl
   - optparse-applicative
   - safe
+  - terminal-size
   - terminfo
   - text
   - unix
