Switch message printing to use `prettyprinter`
This seems to be the most flexible pretty-printer library out there that
is not String-based, and has terminal support.  Dhall uses it as well.

--- a/package.yaml
+++ b/package.yaml
@@ -18,11 +18,14 @@ extra-source-files:
   - dhall/CommandWrapper/Type/*.dhall
 
 default-extensions:
+  - DefaultSignatures
   - DeriveAnyClass
   - DeriveFunctor
   - DeriveGeneric
   - DerivingStrategies
   - DuplicateRecordFields
+  - FlexibleContexts
+  - FlexibleInstances
   - GeneralizedNewtypeDeriving
   - InstanceSigs
   - LambdaCase
@@ -54,6 +57,8 @@ dependencies:
   - mainplate
   - mtl
   - optparse-applicative
+  - prettyprinter
+  - prettyprinter-ansi-terminal
   - safe
   - terminal-size
   - terminfo
