Represent Dhall library version as `Version` instead of `Text`

--- a/package.yaml
+++ b/package.yaml
@@ -60,6 +60,7 @@ dependencies:
   - prettyprinter
   - prettyprinter-ansi-terminal
   - safe
+  - template-haskell
   - terminal-size
   - terminfo
   - text
