--- a/stack.yaml
+++ b/stack.yaml
@@ -13,14 +13,11 @@ packages:
       git: https://github.com/trskop/mainplate.git
       commit: 34bc37da5bf31fd158aeda28d3297fc7e0062ce8
     extra-dep: True
-  - location:
-      git: https://github.com/trskop/verbosity.git
-      commit: 2739b6bdf2bc7ed7d8c938d794e96341a37f2d2b
-    extra-dep: True
 
 extra-deps:
   - endo-0.3.0.1
   - fuzzy-0.1.0.0
+  - verbosity-0.3.0.0
 
   - dhall-1.21.0
   - dhall-bash-1.0.19
