Path information for future `config` functionality
This is just a copy of functionality that is available for `yx path`.
Some of it was already refactored for `config` needs, but it still needs
a lot of work.

--- a/package.yaml
+++ b/package.yaml
@@ -72,6 +72,9 @@ dependencies:
   - unordered-containers
   - verbosity >=0.3
 
+  # For `config`, may be redesigned:
+  - projectroot
+
 ghc-options: -Wall
 
 library:
