Enabled `BlockArguments` globally

--- a/package.yaml
+++ b/package.yaml
@@ -19,6 +19,7 @@ extra-source-files:
   - dhall/CommandWrapper/Type/*.dhall
 
 default-extensions:
+  - BlockArguments
   - DefaultSignatures
   - DeriveAnyClass
   - DeriveFunctor
