--- a/stack.yaml
+++ b/stack.yaml
@@ -13,6 +13,10 @@ packages:
       git: https://github.com/trskop/mainplate.git
       commit: 118acdb919e7bd7aaa07e7554a2d1eabde86acf5
     extra-dep: True
+  - location:
+      git: https://github.com/trskop/open-in-editor.git
+      commit: eec72c9c99fd8bd89866bdd85a23343a4a6fbae8
+    extra-dep: True
 
 extra-deps:
   - endo-0.3.0.1
