Extends `(Exec)NamedCommand` definition with `notifyWhen` field
This is a preparation for when `exec` will take this configuration from
individual commands.

--- a/stack.yaml
+++ b/stack.yaml
@@ -5,18 +5,6 @@ resolver: lts-13.25
 
 packages:
   - '.'
-  - location:
-      git: https://github.com/trskop/host-and-port.git
-      commit: f4639d63f5c2e4c4faef94f5214111625af2a85d
-    extra-dep: True
-  - location:
-      git: https://github.com/trskop/mainplate.git
-      commit: 118acdb919e7bd7aaa07e7554a2d1eabde86acf5
-    extra-dep: True
-  - location:
-      git: https://github.com/trskop/open-in-editor.git
-      commit: eec72c9c99fd8bd89866bdd85a23343a4a6fbae8
-    extra-dep: True
 
 extra-deps:
   - endo-0.3.0.1
@@ -35,6 +23,15 @@ extra-deps:
 # - megaparsec-7.0.4
 # - repline-0.2.0.0
 # - neat-interpolation-0.3.2.4  # dhall-bash
+
+  - git: https://github.com/trskop/host-and-port.git
+    commit: f4639d63f5c2e4c4faef94f5214111625af2a85d
+
+  - git: https://github.com/trskop/mainplate.git
+    commit: 118acdb919e7bd7aaa07e7554a2d1eabde86acf5
+
+  - git: https://github.com/trskop/open-in-editor.git
+    commit: eec72c9c99fd8bd89866bdd85a23343a4a6fbae8
 
 flags:
   verbosity:
