--- a/stack.yaml
+++ b/stack.yaml
@@ -24,6 +24,8 @@ extra-deps:
 # - repline-0.2.0.0
 # - neat-interpolation-0.3.2.4  # dhall-bash
 
+  - lock-file-0.7.0.0
+
   - git: https://github.com/trskop/host-and-port.git
     commit: f8cbf6c84e859bd5020685ac677ff04937a866d6
 
@@ -32,6 +34,7 @@ extra-deps:
 
   - git: https://github.com/trskop/open-in-editor.git
     commit: eec72c9c99fd8bd89866bdd85a23343a4a6fbae8
+
 
 flags:
   verbosity:
