Functions to call `config --dhall{,-filter}` in Bash library

--- a/package.yaml
+++ b/package.yaml
@@ -14,9 +14,10 @@ category: Tools
 
 extra-source-files:
   - README.md
-  - dhall/*.dhall
-  - dhall/CommandWrapper/*
-  - dhall/CommandWrapper/Type/*
+  - bash/*
+  - dhall/*
+  - dhall/**/*
+  - man/*.md
 
 default-extensions:
   - BlockArguments
