--- a/package.yaml
+++ b/package.yaml
@@ -95,6 +95,9 @@ dependencies:
   - serialise
   - transformers
 
+  # Not on Stackage or Hackage
+  - open-in-editor
+
 ghc-options: -Wall -Wcompat
 
 library:
@@ -120,7 +123,6 @@ executables:
     dependencies:
       - *this
       - turtle
-      - open-in-editor
 
   command-wrapper-exec:
     source-dirs: app-exec
