Move more stuff related to libraries into its own module

--- a/package.yaml
+++ b/package.yaml
@@ -35,6 +35,7 @@ default-extensions:
   - MultiWayIf
   - NamedFieldPuns
   - OverloadedStrings
+  - PatternSynonyms
   - RankNTypes
   - RecordWildCards
   - ScopedTypeVariables
