Support for static build
At the moment custom docker image is required. That is obtained by
modifying image built by <https://github.com/utdemir/ghc-musl> to
contain `ncurses` library as well.  After that it is loaded as
`ghc-musl:v4-libgmp-ghc865-extended` into docker:

```Bash
docker load -i "${TARBALL}"
```

After that we can call:

```Bash
./install static
```

Which gives us following files:

```
out/command-wrapper-0.1.0.0-rc1.tar.xz
out/command-wrapper-0.1.0.0-rc1.tar.xz.sha256sum
```

--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,5 @@ cabal.project.local~
 # {{{ Local ###################################################################
 .shake/
 command-wrapper.cabal
-man/*.1
-man/*.7
-#stack.yaml
+out/
 # }}} Local ###################################################################
