--- a/stack.yaml
+++ b/stack.yaml
@@ -1,7 +1,11 @@
 # For advanced use and comprehensive documentation of the format, please see:
 # https://docs.haskellstack.org/en/stable/yaml_configuration/
 
+# GHC 8.6.5
 resolver: lts-14.27
+
+# GHC 8.8.2
+#resolver: lts-15.0
 
 packages:
   - '.'
