Run Bash library tests as part of test suite

--- a/command-wrapper/package.yaml
+++ b/command-wrapper/package.yaml
@@ -227,5 +227,5 @@ tests:
       - deepseq
       - tasty
       - tasty-hunit
-#     - tasty-program
+      - tasty-program
     ghc-options: ["-threaded", "-rtsopts", "-with-rtsopts=-N"]
