Switching to LTS 15.5 (GHC 8.8.3) for normal build
This required switching the whole `command-wrapper` package to
`NoImplicitPrelude`.  Otherwise we would have inconsistent warnings
between GHC 8.6 and 8.8 builds. Static build still uses GHC 8.6 due to
Docker image that we are using.

Small feature/fix got into this commit as well.  Command line completion
for toolset shows only subcommands on empty pattern, i.e. for `TOOLSET
<TAB>`.  One needs to write `TOOLSET -<TAB>` to get options.  This
gives us better UX story.

--- a/command-wrapper/package.yaml
+++ b/command-wrapper/package.yaml
@@ -45,6 +45,7 @@ default-extensions:
   - LambdaCase
   - MultiWayIf
   - NamedFieldPuns
+  - NoImplicitPrelude
   - OverloadedStrings
   - PatternSynonyms
   - RankNTypes
