--- a/command-wrapper-core/package.yaml
+++ b/command-wrapper-core/package.yaml
@@ -56,9 +56,9 @@ dependencies:
   - bytestring
   - case-insensitive
   - comonad
-  - dhall >=1.28
-  # ^ Dhall Standard 12.0.0; Command Wrapper switched to {From,To}Dhall,
-  # Encoder, Decoder, etc. which is backwards incompatible with older versions.
+  - dhall >=1.31
+  # ^ Dhall Standard 15.0.0; Changes in `FromDhall`/`ToDhall` definitions that
+  # aren't bacward compatible.
   - directory
   - executable-path
   - filepath
