--- a/command-wrapper/package.yaml
+++ b/command-wrapper/package.yaml
@@ -73,13 +73,13 @@ dependencies:
   - comonad
   - containers
   - cryptonite
-  - dhall >=1.28
-  # ^ Dhall Standard 12.0.0; Command Wrapper switched to {From,To}Dhall,
-  # Encoder, Decoder, etc. which is backwards incompatible with older versions.
-  - dhall-bash >=1.0.25
-  # ^ First version supporting dhall-1.28.
-  - dhall-json >=1.6.0
-  # ^ First version supporting dhall-1.28.
+  - dhall >=1.31
+  # ^ Dhall Standard 15.0.0; Changes in `FromDhall`/`ToDhall` definitions that
+  # aren't bacward compatible.
+  - dhall-bash >=1.0.29
+  # ^ First version supporting dhall-1.31.
+# - dhall-json >=1.6.3
+  # ^ First version supporting dhall-1.31.
   - directory
   - either
   - endo >=0.3.0.1
