--- a/command-wrapper-core/package.yaml
+++ b/command-wrapper-core/package.yaml
@@ -4,6 +4,10 @@ synopsis: |
   Command wrapper for building modular toolsets with uniform UI: Core library
 description: |
   Command wrapper for building modular toolsets with uniform UI: Core library
+
+  See [GitHub README](https://github.com/trskop/command-wrapper#readme) for
+  more information.
+
 github: trskop/command-wrapper
 license: BSD3
 license-file: LICENSE
@@ -49,7 +53,9 @@ default-extensions:
   - TypeOperators
 
 dependencies:
-  - base
+  - base >=4.12 && <5
+  # ^ Version 4.12.0.0 is bundled with 8.6.*, we support GHC 8.6.5 for static
+  # build.
 
   - ansi-terminal
   - atomic-write >=0.2.0.0
