--- a/command-wrapper-subcommand/package.yaml
+++ b/command-wrapper-subcommand/package.yaml
@@ -4,6 +4,10 @@ synopsis: |
   Command wrapper for building modular toolsets with uniform UI: Subcommand library
 description: |
   Command wrapper for building modular toolsets with uniform UI: Subcommand library
+
+  See [GitHub README](https://github.com/trskop/command-wrapper#readme) for
+  more information.
+
 github: trskop/command-wrapper
 license: BSD3
 license-file: LICENSE
@@ -52,7 +56,9 @@ default-extensions:
 dependencies:
   - command-wrapper-core
 
-  - base
+  - base >=4.12 && <5
+  # ^ Version 4.12.0.0 is bundled with 8.6.*, we support GHC 8.6.5 for static
+  # build.
 
   - case-insensitive
   - dhall >=1.31.1
