--- a/command-wrapper/package.yaml
+++ b/command-wrapper/package.yaml
@@ -238,4 +238,5 @@ tests:
       - tasty
       - tasty-hunit
       - tasty-program
+      - temporary
     ghc-options: ["-threaded", "-rtsopts", "-with-rtsopts=-N"]
